--- a/selecciontarea.html
+++ b/selecciontarea.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coke-KRONOS - Selección de Tarea</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/seleccionTarea.css">
 </head>
 <body>
     <!-- Contenedor Principal de Selección de Tarea -->
