Fusión de nuevas vistas con sus controladores y nuevas rutas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Coke Kronos</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/login.css">
 </head>
-
+<body>
 
 <!-- Contenedor principal del login -->
 <div class="login-container">
@@ -35,10 +36,12 @@
             <p id="errorMessage" class="error-message"></p>
 
             <!-- Enlace para recuperación de contraseña -->
-            <p><a href="/users/olvido" class="forgot-password">¿Olvidaste tu contraseña?</a></p>
+            <p><a href="olvido.html" class="forgot-password">¿Olvidaste tu contraseña?</a></p>
         </form>
     </div>
 </div>
 <!-- Enlace al script de validación y manejo de login -->
-<script src="/javascript/login.js"></script>
+<script src="./js/login.js"></script>
+</body>
+</html>
 
